package sim;

enum WorldOperationResult {
    NO_ERROR = 0;
    NO_SUCH_OBJECT = 1;
    INVALID_ARGUMENT = 2;
};
