package sim.messages;

import "types.proto";

message WorldCommand {
    optional uint32 token = 1;

    /** servers send the role to tell the clients who originally sent that
     * command. a client which tries to set a role is seen as a protocol
     * violator and gets disconnected.
     */
    optional uint32 role = 2;

    optional TerraformRaise tf_raise = 128;
    optional TerraformLevel tf_level = 129;
};

message TerraformRaise {
    required float xc = 1;
    required float yc = 2;
    required uint32 brush_size = 3;
    repeated float density_map = 4;
    required float brush_strength = 5;
};

message TerraformLevel {
    required float xc = 1;
    required float yc = 2;
    required uint32 brush_size = 3;
    repeated float density_map = 4;
    required float brush_strength = 5;
    required float reference_height = 6;
};

message FluidSource_Create {
    required float x = 1;
    required float y = 2;
    required float radius = 3;
    required float height = 4;
    required float capacity = 5;
    /** servers send the object_id; if a client sets the object_id, it is
     * ignored (and the client possibly disconnected for violating the
     * protocol) */
    optional uint64 object_id = 6;
};

message FluidSource_SetPos {
    required uint64 object_id = 1;
    required float new_x = 2;
    required float new_y = 3;
};

message FluidSource_SetParams {
    required uint64 object_id = 1;
    required float new_radius = 2;
    required float new_height = 3;
    required float new_capacity = 4;
};

message FluidSource_Delete {
    required uint64 object_id = 1;
};

message WorldCommandResponse {
    required uint32 token = 1;
    optional .sim.WorldOperationResult result = 2;
};
